k8s/overlays/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website-prod.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 7000
